--- a/index.html
+++ b/index.html
@@ -1,15 +1,30 @@
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-        <link rel="stylesheet" href="main.css">
-    </head>
-    <body>
-        <main>
-        </main>
-        <script src="main.js"></script>
-    </body>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="main.css" />
+  </head>
+  <body>
+    <main>
+      <label>
+        Search:
+        <input type="text" id="search-input" />
+      </label>
+      <label>
+        categories:
+        <select id="categories"></select>
+      </label>
+      <ul class="emojiList"></ul>
+    </main>
 
+    <script src="main.js"></script>
+    <script src="copy-to-clipboard.js"></script>
+  </body>
 </html>
-
