added user story 5: It should be possible to add an emoji as favourite
created function for save emojis in local storage. 
loaded local storage first in fetch time.
changed render function to render favourite emojis as well.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
         categories:
         <select id="categories"></select>
       </label>
-      <ul class="emojiList"></ul>
+      <div class="emojiList">
+          clicked emoji to copy:
+        <ul></ul>
+      </div>
+      <div class="favoriteList">
+          Favorites:
+        <ul></ul>
+      </div>
     </main>
 
     <script src="main.js"></script>
